--- a/style.css
+++ b/style.css
@@ -10,26 +10,29 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: pink;
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
-
 .bloque-login {
-    width: 420 px;
-    background: darkorchid;
+    width: 450 px;
+    margin: auto;
+    margin-top: 100px;
+    background: rgb(128, 99, 171);
     color: white;
+    box-shadow: 7px 13px 37px #35093e; /*sobra al box*/
     border-radius: 10px;
-    padding: 30px 40px;
+    padding: 30px;
 }
 
-.bloque-login h1 {
-    font-size: 36px;
+.bloque-login h2{
+    font-size: 25px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
 .bloque-login .input-box {
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 60px;
     margin: 30px 0;
 }
 
@@ -42,12 +45,12 @@ body {
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #ffffff;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
-    color: #fff;
+    color: #ffffff;
 }
 
 .input-box i {
@@ -78,12 +81,12 @@ body {
     margin: 20px 0 15px;
 }
 
-.bloque-login p a {
-    color: #fff;
+.register-link a{
+    color: white;
     text-decoration: none;
-    font-weight: 600;
 }
 
-.register-link p a:hover {
+.register-link a:hover {
+    color: rgb(31, 84, 199);
     text-decoration: underline;
 }
