--- a/styleI.css
+++ b/styleI.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
 header {
-    background-color: #333;
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
@@ -33,10 +33,14 @@ nav ul li:last-child {
     margin-right: 0;
 }
   
-nav ul li a {
-    text-decoration: none;
+li, a{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
     color: white;
 }
+
+
   
 footer {
     background-color: #f2f2f2;
@@ -50,18 +54,23 @@ footer {
     margin: 0 auto;
 }
   
-.footer-links {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 10px;
+.logo{
+    cursor: pointer;
 }
   
-.footer-links li {
-    display: inline;
-    margin-right: 10px;
+.nav__links{
+    list-style: none;
 }
-  
-.footer-links li:last-child {
-    margin-right: 0;
+
+.nav__links li{
+    display: inline-block;
+    
 }
-  
+
+.nav__links li a{
+    transition: all 0.3s ease 0s;
+}
+
+.nav__links li a:hover{
+    color: #f4dbfe;
+}
