--- a/styleI.css
+++ b/styleI.css
@@ -1,39 +1,45 @@
+/* Diseño del cuerpo */
 body {
     margin: 0;
     padding: 0;
-    font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Diseño del pie de pagina */
 header {
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px; /* ESTO ES PARA PONER UN ESPACIO ENTRE EL HEADER Y EL FOOTER */
+    margin-bottom: 20px;
+    /* ESTO ES PARA PONER UN ESPACIO ENTRE EL HEADER Y EL FOOTER */
 }
-  
+
+/* Diseño del titlo de la pagina */
 .logo {
     margin: 0;
     color: white;
 }
-  
+
+/* Elaces */
 nav ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0px;
     padding: 0;
     display: flex;
 }
-  
+
 nav ul li {
     margin-right: 20px;
 }
-  
+
 nav ul li:last-child {
     margin-right: 0;
 }
-  
-li, a{
+
+/* Diseño de los enlaces */
+li,a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -41,52 +47,121 @@ li, a{
 }
 
 
-  
+/* Diseño pie de pagina */
 footer {
-    background-color: #f2f2f2;
-    padding: 20px;
+    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    color: antiquewhite;
+}
+
+/*Centrar el pie de pagina*/
+.text-center {
     text-align: center;
-    margin-top: 20px; 
+    cursor: pointer;
+    color: rgb(255, 255, 255);
 }
-  
-.footer-content {
-    max-width: 1200px;
-    margin: 0 auto;
+
+/*Cambia de color con el cursor el pie de pagina*/
+.text-center:hover {
+    color: blue;
 }
-  
-.logo{
+
+.logo {
     cursor: pointer;
 }
-  
-.nav__links{
+
+.nav__links {
     list-style: none;
 }
 
-.nav__links li{
+.nav__links li {
     display: inline-block;
-    
+
 }
 
-.nav__links li a{
+.nav__links li a {
     transition: all 0.3s ease 0s;
 }
 
-.nav__links li a:hover{
+.nav__links li a:hover {
     color: #f4dbfe;
 }
 
 .separador{
     display: flex;
+    font-size: 18px;
+    color: rgb(70, 17, 96);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    text-align: center;
+    margin: auto;
 }
 
-.separacion{
-    margin: 0px 250px;
+.separador p {
+    color: rgb(44, 44, 44);
+
 }
 
-.separacion2{
+/*Diseño cuadros de texto*/
+.label {
+    width: 250px;
+    height: 30px;
+    text-align: center;
+    border-radius: 8px;
+    margin-top: .5rem;
+
+}
+
+/*Diseño del boton*/
+.btn {
+    width: 100px;
+    height: 40px;
+    background: #3c025d;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    margin: 10px;
+}
+
+.separacion {
+    margin: 0px 350px;
+    margin-right: 50px;
+    
+}
+
+
+.separacion2 {
     margin: 0px 550px;
+    
+
 }
 
 .centrado{
     text-align: center;
+}
+
+.resultadoC{
+    width: 250px;
+    height: 30px;
+    text-align: center;
+    border-radius: 8px;
+    margin-top: .5rem;
+    
+   
+}
+
+.resultadoD{
+    width: 250px;
+    height: 30px;
+    text-align: center;
+    border-radius: 8px;
+    margin-top: .5rem;
+    margin: 20px;
 }
