Correción texts area

--- a/styleI.css
+++ b/styleI.css
@@ -154,9 +154,8 @@ footer {
     height: 30px;
     text-align: center;
     border-radius: 8px;
-    margin-top: .5rem;
-    
-   
+    margin-top: .5rem; 
+    resize: none;
 }
 
 .resultadoD{
@@ -165,5 +164,5 @@ footer {
     text-align: center;
     border-radius: 8px;
     margin-top: .5rem;
-    margin: 20px;
+    resize: none;
 }
